# soup

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  config.hpp.in  main.cpp  manager.cpp  manager.hpp
src/models/: account.cpp  account.hpp
src/persistence/: account.cpp  account.hpp  persistence.cpp  persistence.hpp
